--- a/generators/app/templates/src/templates/_includes/analytics.html
+++ b/generators/app/templates/src/templates/_includes/analytics.html
@@ -1,4 +1,4 @@
-{% if craft.config.environment == 'production' %}
+{% if craft.config.__environment == 'production' %}
 <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
