Add a whole bunch of example, empty, and useful SCSS files and organised the files.

--- a/generators/app/templates/src/templates/_layout.html
+++ b/generators/app/templates/src/templates/_layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<!--[if IE 8]><html class="no-js lt-ie10 lt-ie9" itemscope itemtype="http://schema.org/Organization"> <![endif]-->
-<!--[if IE 9]><html class="no-js lt-ie10" itemscope itemtype="http://schema.org/Organization"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" itemscope itemtype="http://schema.org/Organization"> <!--<![endif]-->
+<!--[if IE 8]><html class="no-js lt-ie10 lt-ie9"> <![endif]-->
+<!--[if IE 9]><html class="no-js lt-ie10"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,7 +15,9 @@
 {% endif %}
 <title>{{ _title is defined ? _title | raw }}{{ siteName }}</title>
 
-<meta itemprop="name" content="{{ siteName }}"/>
+{{ craft.minimee.css([
+        '/assets/css/app.css'
+    ]) }}
 
 {% include "_includes/analytics.html" %}
 
@@ -23,15 +25,12 @@
 
 <body class="{% block bodyClass %}{% endblock %}">
 
-{% cache %}
 
     {% block content %}{% endblock %}
 
-{% endcache %}
 
 
-
-{% include "_includes/scripts.html" %}
+    {% include "_includes/scripts.html" %}
 
 
 
