Fixed errors in various files.

--- a/generators/app/templates/src/scss/_utilities.scss
+++ b/generators/app/templates/src/scss/_utilities.scss
@@ -1,7 +1,7 @@
 // Include Utilities
 
-@import "aspectRatio";
-@import "grid";
-@import "images";
-@import "positioning";
-@import "clearfix";
+@import "utilities/aspectRatio";
+@import "utilities/grid";
+@import "utilities/images";
+@import "utilities/positioning";
+@import "utilities/clearfix";
