By default let's entirely skip JS for IE8 and below.

--- a/generators/app/templates/src/templates/_layout.html
+++ b/generators/app/templates/src/templates/_layout.html
@@ -29,11 +29,9 @@
 
     {% block content %}{% endblock %}
 
-
-
+	<!--[if gte IE 9]><!-->
     {% include "_includes/scripts.html" %}
-
-
+	<!--<![endif]-->
 
 </body>
 </html>
