--- a/generators/app/templates/src/templates/_includes/scripts.html
+++ b/generators/app/templates/src/templates/_includes/scripts.html
@@ -1,9 +1,3 @@
-{#
-	=============================
-	Add your scripts.
-	Note the behaviour of the gulpfile and the bower inject code.
-	=============================
-#}
 
 {#
 	Our site global "APP" variable
@@ -18,26 +12,9 @@
 </script>
 
 {#
-	Our default Minimee config embeds scripts async.
-	If you have scripts that must be loaded before the async ones, specify those here.
-#}
-{# {{ craft.minimee.js([
-	'/path/to/script.js'
-],
-{
-	jsReturnTemplate : '<script src="%s"></script>'
-} }} #}
-
-
-{#
-	App js goes here
+	App JS goes here
 #}
 {{ craft.minimee.js([
-	<!-- bower:js -->
-	<!-- endinject -->
+	'/assets/vendor/jquery/jquery-2.2.1.min.js',
 	'/assets/js/app.js'
 ]) }}
-
-
-
-{# List other scripts here if you wish #}
