Add a default `body` class for true BEM.

--- a/generators/app/templates/craft/templates/_layout.html
+++ b/generators/app/templates/craft/templates/_layout.html
@@ -24,7 +24,7 @@
 
 </head>
 
-<body class="{% block bodyClass %}{% endblock %}">
+<body class="body {% block bodyClass %}{% endblock %}">
 
 
     {% block content %}{% endblock %}
