--- a/generators/app/templates/craft/templates/_layout.html
+++ b/generators/app/templates/craft/templates/_layout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--[if lt 9]><html class="no-js lt-ie10 lt-ie9"> <![endif]-->
+<!--[if lt IE 9]><html class="no-js lt-ie10 lt-ie9"> <![endif]-->
 <!--[if IE 9]><html class="no-js lt-ie10"> <![endif]-->
 <!--[if gt IE 9]><!--> <html class="no-js"> <!--<![endif]-->
 <head>
