Include Nathan's awesome "debug PSD" file, updated to rely on CDN copies of libs.

--- a/generators/app/templates/craft/templates/_includes/scripts.html
+++ b/generators/app/templates/craft/templates/_includes/scripts.html
@@ -18,3 +18,11 @@
 	'/assets/vendor/jquery/jquery-2.2.1.min.js',
 	'/assets/js/app.js'
 ]) }}
+
+
+{#
+	If in local development, include our debugging helper
+#}
+{% if craft.config.__environment == 'local' %}
+	{% include '_includes/debugpsd' %}
+{% endif %}
