--- a/generators/app/templates/craft/templates/_includes/analytics.html
+++ b/generators/app/templates/craft/templates/_includes/analytics.html
@@ -1,11 +1,13 @@
-{% if craft.config.__environment == 'production' %}
+{# Google Analytics -#}
 <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-YOUR-ID', 'auto');
-    ga('send', 'pageview');
+	(function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+	function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+	e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+	e.src='https://www.google-analytics.com/analytics.js';
+	r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+	{# only track view if production, not admin, and not live preview -#}
+	{%- if craft.config.__environment == 'production' and not craft.request.isLivePreview and (not currentUser or not currentUser.admin) -%}
+		ga('create','{{- craft.config.__GoogleAnalyticsID -}}','auto');
+		ga('send','pageview');
+	{%- endif -%}
 </script>
-{% endif %}
