Remove inclusion of "siteUrl" variable at front of asset resource links.

--- a/generators/app/templates/craft/templates/_includes/scripts.html
+++ b/generators/app/templates/craft/templates/_includes/scripts.html
@@ -17,4 +17,4 @@
 	Async head vendor stuff.  The main bundle is in the footer, this is just a few
 	helpers that aren't adding functionality, just some cross borwser help
 #}
-<script src="{{siteUrl}}assets/js/bundle.min.v{{ craft.config.get('version', 'app') }}.js" async></script>
+<script src="/assets/js/bundle.min.v{{ craft.config.get('version', 'app') }}.js" async></script>
