--- a/generators/app/templates/craft/templates/_layout.html
+++ b/generators/app/templates/craft/templates/_layout.html
@@ -18,7 +18,7 @@
 {# {{ craft.minimee.css([
 	'/assets/css/app.css'
 ]) }} #}
-<link rel="stylesheet" type="text/css" href="{{siteUrl}}assets/css/app.min.v{{- craft.config.get('version', 'app') -}}.css">
+<link rel="stylesheet" type="text/css" href="/assets/css/app.min.v{{- craft.config.get('version', 'app') -}}.css">
 
 {% include "_includes/analytics.html" %}
 
