make error pages less silly as these actually end up slipping through the cracks

--- a/generators/app/templates/craft/templates/_errors/500.html
+++ b/generators/app/templates/craft/templates/_errors/500.html
@@ -1,8 +1,6 @@
 {% extends "_layout" %}
-{% set title = "404" %}
+{% set title = "500" %}
 
 {% block content %}
-    <h1>Error, end of days!</h1>
-
-    <p>500 This is terrible :(</p>
+    <h1>500 - Sorry, there was an error</h1>
 {% endblock %}
