--- a/generators/app/templates/craft/templates/_layout.html
+++ b/generators/app/templates/craft/templates/_layout.html
@@ -17,7 +17,7 @@
 
 
 
-{# <link rel="stylesheet" type="text/css" href="/assets/css/app.min.v{{- craft.config.get('version', 'app') -}}.css"> #}
+{# <link rel="stylesheet" type="text/css" href="/assets/css/app.min.v{{- craft.config.get('version', 'one') -}}.css"> #}
 {# Inline our font declarations #}
 <style type="text/css">
     {{- source('_readonly/css/fonts.min.css') -}}
@@ -25,10 +25,10 @@
 
 {# INLINING CSS - requires Cookies plugin to be activated #}
 {%- set cssPath -%}
-    /assets/css/app.{{ craft.config.get('environment', 'app') != 'local' ? 'min.' }}{{- craft.config.get('environment', 'app') != 'local' ? 'v' ~ craft.config.get('version', 'app') ~ '.' -}}css
+    /assets/css/app.{{ craft.config.get('environment', 'one') != 'local' ? 'min.' }}{{- craft.config.get('environment', 'one') != 'local' ? 'v' ~ craft.config.get('version', 'one') ~ '.' -}}css
 {%- endset -%}
 {% set cachedCssVersion = getCookie('cached-css-version') %}
-{% if not craft.config.devMode and cachedCssVersion != craft.config.get('version', 'app') %}
+{% if not craft.config.devMode and cachedCssVersion != craft.config.get('version', 'one') %}
     {{ setCookie('cached-css-version', plus.one.config('version'), now | date_modify("+7 days").timestamp ) }}
     <style>
         {{ source('_readonly/css/app.min.css') }}
@@ -52,7 +52,7 @@
     {% block content %}{% endblock %}
 
     {# If in local development, include our debugging helper #}
-    {% if craft.config.get('environment', 'app') == 'local' %}
+    {% if craft.config.get('environment', 'one') == 'local' %}
         {% include '_includes/debugpsd' %}
     {% endif %}
 
