--- a/generators/app/templates/craft/templates/_errors/error.html
+++ b/generators/app/templates/craft/templates/_errors/error.html
@@ -1,6 +1,6 @@
 {% extends "_errors/_layout" %}
 
-{% set title = "Page Not Found" %}
+{% set title = "Unknown Error Occurred" %}
 
 {% block content %}
     <h1>{{ title }}</h1>
